--- a/_posts/2024-01-03-of-books.md
+++ b/_posts/2024-01-03-of-books.md
@@ -10,17 +10,12 @@ published: true
 sitemap: true
 ---
 
-### Stories
+### Fictions
 - Angels and Demons
 - The Lost Symbols
 - Inferno
 - Origins
 - Sherlock Holmes
-
-### Self
-- Design Sprint
-- Permanant Record
-- A History of God
 
 ### Comic
 - Doraemon
@@ -29,4 +24,9 @@ sitemap: true
 - Naruto
 - Detective Conan
 - Kindaichi
-- 
+- One Piece
+
+### Misc.
+- Design Sprint
+- Permanant Record
+- A History of God
