--- a/_posts/2023-12-23-ranting.md
+++ b/_posts/2023-12-23-ranting.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Ranting
+title: Gugel
 date: 2023-12-23 23:54 +0800
 description: Ranting is a link-in-bio platform that allows any Malaysian creators to showcase their work and social media profiles in a single, easy-to-share link.
 image: /assets/img/posts/ranting-thumb.png
@@ -9,6 +9,38 @@ tags: [rails, mvp, ranting]
 published: true
 sitemap: true
 ---
+
+In early 2023, I was researching ideas to build an online platform (SaaS) providing service. to Malaysian. This is how that story 
+
+## Background
+
+Malaysians are (in general)
+
+![number-of-internet-users-in-Malaysia-2014-2029.png](number-of-internet-users-in-Malaysia-2014-2029.png)
+
+## Systems design
+
+
+
+## Information design 
+
+
+
+## UI design
+
+
+
+## Challenges
+
+### Branding 
+
+/assets/img/posts/ranting-thumb.png
+
+### Technology
+
+
+
+
 Ranting is a link-in-bio platform that allows any Malaysian creators to showcase their work and social media profiles in a single, easy-to-share link. 
       
 It is a platform that allows creators to add links to their website, blog, social media profiles, email address, and other online assets. It can be customized with a variety of colors, fonts, and images. Ranting is free to use for 30 days, and there are paid plans available for creators who need more features.
@@ -20,8 +52,5 @@ Here are some of the features that make Ranting a good option for Malaysian crea
   <li>It is a reliable and secure platform.</li>
 </ul>
 
-It's still work in progress. Do check out the alpha build [here](https://ranting-mvp.onrender.com) and let me know what you think 😀✨
+It's still work in progress. Do check out the alpha build [here](https://www.gugel.my) and let me know what you think 😀✨
 
-## sini.la
-
-https://sini.la/ttceh
